--- a/src/App.less
+++ b/src/App.less
@@ -7,16 +7,32 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #fff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #282c34;
 }
 
 .App-link {
   color: #09d3ac;
+}
+
+.comic {
+	padding: 15px;
+}
+
+.comic-container {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+}
+
+.transcript {
+	color: #7e7e7e;
+	font-style: italic;
+	margin: 5px 20px 20px 20px;
 }
