Added navigation bar to go to next, previous, first, latest and random comics

--- a/src/App.less
+++ b/src/App.less
@@ -22,13 +22,17 @@
 }
 
 .comic {
-	padding: 15px;
+	padding: 5px;
 }
 
 .comic-container {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
+}
+
+.navi-bar {
+	margin: 5px;
 }
 
 .transcript {
