Added feature to add favourite and view favourites list

--- a/src/App.less
+++ b/src/App.less
@@ -35,8 +35,43 @@
 	margin: 5px;
 }
 
+.title {
+	align-items: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+
+	h2 {
+		margin-bottom: 6px;
+	}
+
+	button {
+		border: 0;
+		line-height: 0;
+		margin: 0 5px;
+		padding: 0 8px;
+	}
+}
+
 .transcript {
 	color: #7e7e7e;
 	font-style: italic;
 	margin: 5px 20px 20px 20px;
+}
+
+h1 {
+  a {
+    color: #282c34;
+  }
+}
+
+h2 {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.favourites {
+  margin-left: 20px;
+  margin-right: 20px;
 }
